# toolwatch

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  main.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml  security.yml
alembic/: env.py
alembic/versions/: 0001_bootstrap.py  0002_tool_registry_and_sessions.py  0003_tool_call_execution.py  0004_security_pipeline_v1.py  0005_observability_v1.py  0006_ollama_agent_loop_v1.py  0007_release_hardening.py
docs/: architecture.md  current-task.md  performance.md  portfolio.md  product-spec.md  testing.md  threat-model.md
docs/adr/: 0001-modular-monolith.md  0002-tool-registry-and-agent-sessions.md  0003-tool-call-execution-v1.md  0004-security-pipeline-v1.md  0005-observability-v1.md  0006-dashboard-and-attack-lab-v1.md  0007-ollama-agent-loop-v1.md  0008-release-recovery-and-shutdown.md
docs/releases/: 0.1.0.md
scripts/: demo_v010.sh  generate_sbom.py  image_smoke.py  load_test.py  package_check.py  query_plans.py  repeat_local_llm.py  seed_load.py  validate_workflows.py  verify_jaeger.py  verify_ollama_agent.py
src/toolwatch/: __init__.py  config.py  http.py  main.py  seed.py  shutdown.py
src/toolwatch/agent/: __init__.py  __main__.py
src/toolwatch/api/: agent_runs.py  audit.py  dependencies.py  errors.py  health.py  metrics.py  router.py  rules.py  sessions.py  tool_calls.py  tools.py
src/toolwatch/application/: __init__.py  agent_runs.py  audit.py  errors.py  ports.py  queries.py  recovery.py  rules.py  sessions.py  tool_calls.py  tools.py
src/toolwatch/attack_lab/: __init__.py  __main__.py  models.py  registry.py  runner.py  scenarios.py
src/toolwatch/domain/: __init__.py  common.py  security.py
src/toolwatch/domain/agents/: __init__.py  loop.py  models.py
src/toolwatch/domain/sessions/: __init__.py  models.py
src/toolwatch/domain/tool_calls/: __init__.py  adapters.py  models.py
src/toolwatch/domain/tools/: __init__.py  models.py
src/toolwatch/infrastructure/: __init__.py
src/toolwatch/infrastructure/adapters/: __init__.py  mock.py  registry.py
src/toolwatch/infrastructure/agents/: __init__.py  (+1 more)
src/toolwatch/recovery/: __init__.py  __main__.py
src/toolwatch/security/: __init__.py  payloads.py  prompt.py  redaction.py  risk.py  rules.py  schema.py
src/toolwatch/telemetry/: __init__.py  attributes.py  context.py  logging.py  metrics.py  middleware.py  provider.py  testing.py  tracing.py
src/toolwatch/web/: __init__.py  dependencies.py  filters.py  presenters.py  router.py  security.py  view_models.py
tests/: conftest.py
tests/benchmarks/: security_pipeline.py
tests/integration/: conftest.py  test_agent_runs.py  test_attack_lab.py  test_database_readiness.py  test_migrations.py  test_ollama_agent.py  test_recovery.py  test_registry_and_sessions_api.py  test_tool_call_execution.py
tests/unit/: test_liveness.py  test_prompt_safety.py  test_release_metadata.py  test_shutdown.py
tests/unit/api/: test_openapi.py
tests/unit/application/: test_agent_loop_types.py  test_services.py  test_tool_call_service.py
tests/unit/domain/: test_entities.py  test_tool_calls.py
tests/unit/infrastructure/: test_mock_adapters.py
tests/unit/security/: test_redaction.py  test_risk_and_rules.py  test_schema_validation.py
tests/unit/telemetry/: test_observability.py
tests/unit/web/: test_attack_lab_registry.py  test_presenters.py  test_routes.py
(+35 files in other folders)
